--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?19147438');
-  src: url('../font/fontello.eot?19147438#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?19147438') format('woff2'),
-       url('../font/fontello.woff?19147438') format('woff'),
-       url('../font/fontello.ttf?19147438') format('truetype'),
-       url('../font/fontello.svg?19147438#fontello') format('svg');
+  src: url('../font/fontello.eot?74292007');
+  src: url('../font/fontello.eot?74292007#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?74292007') format('woff2'),
+       url('../font/fontello.woff?74292007') format('woff'),
+       url('../font/fontello.ttf?74292007') format('truetype'),
+       url('../font/fontello.svg?74292007#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?19147438#fontello') format('svg');
+    src: url('../font/fontello.svg?74292007#fontello') format('svg');
   }
 }
 */
@@ -56,6 +56,5 @@
 }
  
 .icon-down:before { content: '\e800'; } /* '' */
-.icon-twitter:before { content: '\f099'; } /* '' */
-.icon-instagram:before { content: '\f16d'; } /* '' */
-.icon-vk:before { content: '\f189'; } /* '' */
+.icon-skype:before { content: '\f17e'; } /* '' */
+.icon-google:before { content: '\f1a0'; } /* '' */
